deploy/kustomize/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-helloworld-metrics
  labels:
    helm.sh/chart: helloworld-0.0.1
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/metrics: release-name-helloworld-metrics
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: 9100
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/instance: release-name
