deploy/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-helloworld
  labels:
    helm.sh/chart: helloworld-0.0.1
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /helloworld(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-helloworld
                port:
                  number: 80
